--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
         "clsx": "^2.1.1",
         "date-fns": "^3.6.0",
         "lucide-react": "^0.475.0",
+        "next-themes": "^0.4.6",
         "react-day-picker": "^8.10.1",
+        "sonner": "^2.0.1",
         "tailwind-merge": "^3.0.1",
         "tailwindcss-animate": "^1.0.7"
     }
